# homeassistant-simple-tray

./: LICENSE  README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: settings.json
src-tauri/src/: api_settings.rs  home_assistant.rs  lib.rs  main.rs  tray.rs
src/components/: Config.vue  SettingsForm.vue
